diesel_compile_tests/tests/fail/as_changeset_struct_with_only_primary_key.stderr
error: Deriving `AsChangeset` on a structure that only contains the primary key isn't supported.
  --> $DIR/as_changeset_struct_with_only_primary_key.rs:17:10
   |
17 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = help: If you want to change the primary key of a row, you should do so with `.set(table::id.eq(new_id))`.
   = note: `#[derive(AsChangeset)]` never changes the primary key of a row.
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): AsChangeset` is not satisfied
  --> $DIR/as_changeset_struct_with_only_primary_key.rs:17:10
   |
17 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^ the trait `AsChangeset` is not implemented for `()`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
